--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -65,7 +65,7 @@ gateway:
     authority: http://provider:8080/
 
   nameOverride: ""
-  fullnameOverride: ""
+  fullnameOverride: "gateway"
 
   networkPolicy:
     enabled: true
