--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,13 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.6.1
 
+      - name: Extract tag
+        run: |
+          version=$(grep '^version:' Chart.yaml | awk '{print $2}')
+          echo "Chart version is $version"
+          echo "CHART_VERSION=$version" >> $GITHUB_ENV
+        working-directory: charts/vaas
+
       - name: Run chart-testing (lint)
         run: ct lint --config .github/chart-testing-config.yaml --validate-maintainers=false --charts charts/vaas
 
@@ -49,7 +56,7 @@ jobs:
         with:
           name: vaas
           repository: gdatasoftwareag/charts
-          tag: 1.0.5
+          tag: $CHART_VERSION
           path: charts/vaas
           registry: ghcr.io
           registry_username: ${{ secrets.REGISTRY_USERNAME }}
