--- a/charts/vaas/templates/gateway/poddisruptionbudget.yaml
+++ b/charts/vaas/templates/gateway/poddisruptionbudget.yaml
@@ -1,3 +1,4 @@
+{{- if gt .Values.gateway.replicaCount 1.0  }}
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
@@ -9,3 +10,4 @@ spec:
     matchLabels:
       {{- include "gateway.selectorLabels" . | nindent 6 }}
   minAvailable: {{ .Values.gateway.podDisruptionBudget.minAvailable }}
+{{- end }}
