removes the scanserver

--- a/charts/vaas/charts/gdscan/templates/deployment.yaml
+++ b/charts/vaas/charts/gdscan/templates/deployment.yaml
@@ -35,36 +35,10 @@ spec:
             medium : "Memory"
           {{- end }}
         {{- end }}
-        - name: server-tmp
-          emptyDir: {}
-        - name: scan-socket
-          emptyDir: {}
         - name: client-tmp
-          emptyDir: {}
-        - name: server-var-log
           emptyDir: {}
       {{- include "gdscan.imagePullSecrets" . | nindent 6 }}
       containers:
-        - name: {{ .Values.server.name }}
-          env:
-            - name: date
-              value: "{{ now | unixEpoch }}"
-          image: '{{ .Values.server.image.repository }}:{{ .Values.server.image.tag | default "latest" }}'
-          imagePullPolicy: {{ .Values.server.image.pullPolicy }}
-          {{- if .Values.server.containerSecurityContext.enabled }}
-          securityContext: {{- omit .Values.server.containerSecurityContext "enabled" | toYaml | nindent 12 }}
-          {{- end }}
-          volumeMounts:
-            - name: server-tmp
-              mountPath: /tmp
-            - name: samples
-              mountPath: /tmp/scan
-            - name: scan-socket
-              mountPath: /var/share/run
-            - name: server-var-log
-              mountPath: /var/log
-          resources:
-            {{- toYaml .Values.resources.server | nindent 12 }}
         - name: {{ .Values.client.name }}
           image: '{{ .Values.client.image.repository }}:{{ .Values.client.image.tag | default "latest" }}'
           imagePullPolicy: {{ .Values.client.image.pullPolicy }}
@@ -79,7 +53,7 @@ spec:
             - name: client-tmp
               mountPath: /tmp
           resources:
-            {{- toYaml .Values.resources.client | nindent 12 }}
+            {{- toYaml .Values.client.resources | nindent 12 }}
           ports:
             - name: api
               containerPort: 8080
