--- a/charts/vaas/charts/gdscan/templates/stateful-set.yaml
+++ b/charts/vaas/charts/gdscan/templates/stateful-set.yaml
@@ -42,26 +42,6 @@ spec:
         - name: server-var-log
           emptyDir: {}
       containers:
-        - name: {{ .Values.server.name }}
-          env:
-            - name: date
-              value: "{{ now | unixEpoch }}"
-          image: "{{ .Values.server.image.repository }}:{{ .Values.server.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.server.image.pullPolicy }}
-          {{- if .Values.server.containerSecurityContext.enabled }}
-          securityContext: {{- omit .Values.server.containerSecurityContext "enabled" | toYaml | nindent 12 }}
-          {{- end }}
-          volumeMounts:
-            - name: server-tmp
-              mountPath: /tmp
-            - name: samples
-              mountPath: /tmp/scan
-            - name: scan-socket
-              mountPath: /var/share/run
-            - name: server-var-log
-              mountPath: /var/log
-          resources:
-            {{- toYaml .Values.resources.server | nindent 12 }}
         - name: {{ .Values.client.name }}
           image: "{{ .Values.client.image.repository }}:{{ .Values.client.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.client.image.pullPolicy }}
@@ -76,7 +56,7 @@ spec:
             - name: client-tmp
               mountPath: /tmp
           resources:
-            {{- toYaml .Values.resources.client | nindent 12 }}
+            {{- toYaml .Values.client.resources | nindent 12 }}
           ports:
             - name: api
               containerPort: 8080
