--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -174,19 +174,13 @@ gdscan:
         type: RuntimeDefault
   terminationGracePeriodSeconds: 30
 
-  imagePullSecrets:
-    - gdscanregistry
-
   nameOverride: ""
   fullnameOverride: "gdscan"
 
   networkPolicy:
-    enabled: false
+    enabled: true
 
   podAnnotations: {}
-
-  secret:
-    dockerconfigjson: ""
 
   service:
     type: ""
