--- a/charts/vaas/Chart.yaml
+++ b/charts/vaas/Chart.yaml
@@ -10,7 +10,7 @@ dependencies:
   - name: redis
     version: 18.16.1
     condition: redis.enabled
-    repository: https://charts.bitnami.com/bitnami
+    repository: oci://registry-1.docker.io/bitnamicharts
   - name: mini-identity-provider
     version: 0.1.17
     condition: mini-identity-provider.enabled
