--- a/charts/vaas/Chart.yaml
+++ b/charts/vaas/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: vaas
-version: 1.0.8
+version: 1.1.0
 description: Deployment of a Verdict-as-a-Service on-premise instance
 maintainers:
   - name: G DATA CyberDefense AG
@@ -10,11 +10,7 @@ dependencies:
   - name: redis
     version: 18.16.1
     condition: redis.enabled
-    repository: https://charts.bitnami.com/bitnami
-  - name: gdscan
-    version: 1.8.0
-    condition: gdscan.enabled
-    repository: https://gdatasoftwareag.github.io/gdscan/
+    repository: oci://registry-1.docker.io/bitnamicharts
   - name: mini-identity-provider
     version: 0.1.17
     condition: mini-identity-provider.enabled
