--- a/charts/vaas/templates/gdscan/deployment.yaml
+++ b/charts/vaas/templates/gdscan/deployment.yaml
@@ -69,7 +69,7 @@ spec:
             initialDelaySeconds: 15
             periodSeconds: 5
           env:
-            - name: HostOptions__ShutdownTimeout
+            - name: MaxAnalysisDuration
               value: {{ include "common.secondsToHHMMSS" .Values.gdscan.terminationGracePeriodSeconds | quote }}
       terminationGracePeriodSeconds: {{ .Values.gdscan.terminationGracePeriodSeconds }}
       {{- with .Values.gdscan.nodeSelector }}
