fix broken value mapping with sentry

--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -45,14 +45,14 @@ cloud:
   allowlistLookup:
     enabled: true
 
-sentry:
-  dsn: ""
-  environment: ""
-  release: ""
-  maxBreadcrumbs: ""
-  maxQueueItems: ""
-  enableTracing: ""
-  tracesSampleRate: ""
+# sentry:
+#   dsn: ""
+#   environment: ""
+#   release: ""
+#   maxBreadcrumbs: ""
+#   maxQueueItems: ""
+#   enableTracing: ""
+#   tracesSampleRate: ""
 
 gateway:
   ingress:
