--- a/.github/workflows/sync_readme_to_gitlab.yml
+++ b/.github/workflows/sync_readme_to_gitlab.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - README.md
+    branches:
+      - main
 
 jobs:
   sync-readme:
@@ -11,7 +13,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install Git
       run: |
@@ -30,7 +32,7 @@ jobs:
       run: |
         git clone https://oauth2:${GITLAB_TOKEN}@${GITLAB_REPO}.git gitlab-repo
         cd gitlab-repo
-        git checkout -b update-external-readme
+        git checkout update-external-readme || git checkout -b update-external-readme
         mkdir -p modules/ROOT/external/vaas-helm
         cp ../README.md modules/ROOT/external/vaas-helm/README.md
         git add modules/ROOT/external/vaas-helm/README.md
