Gateway can't resolve other services in zero-trust network configurations #46 allow dns and k8s api server port

--- a/charts/vaas/templates/gateway/networkpolicy.yaml
+++ b/charts/vaas/templates/gateway/networkpolicy.yaml
@@ -24,4 +24,6 @@ spec:
         - port: 80  # VerdictRequestForUrl
         - port: 6379 # Redis
         - port: 8080 # GdScan
+        - port: 53 # DNS
+          protocol: UDP
 {{- end }}
